SignalRenderer, minor tweaks
+Added Signal class
+Added SignalRenderer
*Isolations IDs are no longer shown by default
*Switches names are now light blue instead of white

--- a/src/components/map/Map.css
+++ b/src/components/map/Map.css
@@ -16,6 +16,7 @@
 
 .map svg text.switch-name {
     fill: #eee;
+    fill: #bbf;
 }
 
 .map svg text.isolation-id {
@@ -33,4 +34,8 @@
 
 .map svg g.track-object:hover text {
     display: block;
+}
+
+.map svg g.signal g {
+    stroke: #eee;
 }
