RouteRenderer, code tweaks
+Added Route class
+Added RouteRenderer
*Parts of the map rendered by different renderers are now separated into <g> groups
*Fixed signals not being parsed correctly

--- a/src/components/map/Map.css
+++ b/src/components/map/Map.css
@@ -15,7 +15,6 @@
 }
 
 .map svg text.switch-name {
-    fill: #eee;
     fill: #bbf;
 }
 
@@ -38,4 +37,13 @@
 
 .map svg g.signal g {
     stroke: #eee;
+}
+
+.map svg g.route g {
+    fill: #eee;
+}
+
+.map svg g.route text {
+    fill: #eee;
+    font-size: 72mm;
 }
