Added SignalBoxes, fixed bugs
+Added Misc objects parser
+Added SignalBoxRenderer
*Fixed Switch and TrackObject double apply protection
*Updated scp.py to not exclude Signalboxes

--- a/src/components/map/Map.css
+++ b/src/components/map/Map.css
@@ -46,3 +46,12 @@
     fill: #eee;
     font-size: 72mm;
 }
+
+.map svg g.signalbox {
+    fill: #eee;
+}
+
+.map svg g.signalbox text {
+    fill: #eee;
+    font-size: 4px;
+}
