Added ZoomPan hook, fixed overflow
+Added useZoomPanEmitter hook allowing to move the view to specified location
*Fixed ZoomPanWrapper overflowing in height

--- a/src/components/map/Map.css
+++ b/src/components/map/Map.css
@@ -1,6 +1,9 @@
 .map {
-	flex: 1;
-	background-color: black;
+    flex: 1;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    background-color: black;
 }
 
 .map svg path.track {
