--- a/src/components/App.css
+++ b/src/components/App.css
@@ -3,13 +3,12 @@
     width: 100vw;
     height: 100vh;
     flex-direction: column;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
 }
 
 .side-menu-split {
     display: flex;
     flex-direction: row;
-    flex-wrap: nowrap;
-    width: 100%;
-    height: 100%;
+    flex-wrap: wrap;
+    flex: 1;
 }
