--- a/src/components/sidemenu/SideMenu.css
+++ b/src/components/sidemenu/SideMenu.css
@@ -10,4 +10,15 @@
     height: 100%;
     background-color: #111;
     z-index: 2000;
+    width: 15em;
+    transition: transform 0.3s ease-in-out;
+}
+
+.side-menu.closed {
+    transform: translateX(100%);
+}
+
+.layers-menu ul {
+    list-style-type: none;
+    padding-inline-start: 0;
 }
