--- a/src/components/toolbar/Toolbar.css
+++ b/src/components/toolbar/Toolbar.css
@@ -2,9 +2,10 @@
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
+    align-items: center;
     gap: 10px;
     padding: 10px;
-    border-bottom: 1px solid #333;
+    border-bottom: 2px solid #444;
 }
 
 .toolbar-spacer {
@@ -60,4 +61,3 @@
 .side-menu-toggle:hover g {
     stroke: #fff;
 }
-
