--- a/src/components/loclist/LocList.css
+++ b/src/components/loclist/LocList.css
@@ -2,15 +2,14 @@
     position: absolute;
     left: 0;
     bottom: 0;
-    padding: 8px;
+    padding: 0.5em;
     display: flex;
-    border-top-right-radius: 8px;
-    flex-direction: column;
-    gap: 4px;
-    background-color: #222;
+    gap: 0.5em 1em;
+    flex-wrap: wrap;
 }
 
 .loclist-section {
     display: flex;
-    gap: 4px;
+    gap: 0.5em;
+    flex-wrap: wrap;
 }
