Fixed tracks fill
*Fixed tracks not having transparent fill

--- a/src/components/map/Map.css
+++ b/src/components/map/Map.css
@@ -8,10 +8,12 @@
 
 .map svg path.track {
     stroke-width: 1.44px;
+    fill: transparent;
 }
 
 .map svg path.track-unscaled {
     stroke-width: 1px;
+    fill: transparent;
     vector-effect: non-scaling-stroke;
 }
 
