Added NEVPs layer
+Added No Electric Vehicles points parsing and rendering layer

--- a/src/components/map/Map.css
+++ b/src/components/map/Map.css
@@ -70,3 +70,11 @@
 .map svg g.sign path {
     fill: #eee;
 }
+
+.map svg g.nevp path {
+    fill: #eee;
+}
+
+.map svg g.nevp path.background {
+    fill: #111;
+}
