Various small bugfixes and tweaks
*Changed the map background color
*Tweaked CSS for the side menu
*Fixed an issue where JS errors occurring during the parsing of sceneries were not logged to the console
*Fixed missing error message for an invalid scene header when the first line of the file was empty
*Fixed connections for the Crossing4.444 crossing

--- a/src/components/map/Map.css
+++ b/src/components/map/Map.css
@@ -3,7 +3,7 @@
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
-    background-color: black;
+    background-color: #111;
 }
 
 .map svg path.track {
