--- a/src/components/sidemenu/SideMenu.css
+++ b/src/components/sidemenu/SideMenu.css
@@ -10,7 +10,7 @@
     height: 100%;
     background-color: #141414;
     z-index: 2000;
-    width: 16em;
+    width: max-content;
     transition: transform 0.3s ease-in-out;
     display: flex;
     flex-direction: column;
@@ -28,6 +28,7 @@
 .layers-menu ul {
     list-style-type: none;
     padding-inline-start: 0;
+    margin-block-end: 0;
 }
 
 .layers-menu input {
