--- a/src/components/sidemenu/SideMenu.css
+++ b/src/components/sidemenu/SideMenu.css
@@ -56,3 +56,8 @@
     margin-top: auto;
     align-items: flex-end;
 }
+
+.show-track-hover-info-checkbox input {
+    margin-right: 0.5em;
+    vertical-align: middle;
+}
