Added LayerOptionsMenu component
+Added LayerOptionsMenu component in the side menu which holds all layer-specific options together

--- a/src/components/sidemenu/SideMenu.css
+++ b/src/components/sidemenu/SideMenu.css
@@ -18,6 +18,12 @@
     gap: 1em;
 }
 
+.layer-options-menu {
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+}
+
 .side-menu .hidden {
     visibility: hidden;
 }
