Added signal bars extended renderer
+ExtendedSignalRenderer now also draws signal bars
+ExtendedSignalRenderer  automatically adjusts pole height based on the number of bars and head offset
*Tweaked pole rendering in the ExtendedSignalRenderer
*Signals are now back higher in the rendering queue than signs
*Extended signals no longer have transparent backgrounds
*Fixed missing constants related to signs attaching

--- a/src/components/map/Map.css
+++ b/src/components/map/Map.css
@@ -53,6 +53,10 @@
     stroke: #eee;
 }
 
+.map svg g.extended-signal-icon g path.background {
+    fill: #111;
+}
+
 .map svg g.route g {
     fill: #eee;
 }
