--- a/src/components/map/Map.css
+++ b/src/components/map/Map.css
@@ -83,6 +83,14 @@
     fill: #111;
 }
 
+.map svg g.signal-sign path {
+    fill: #eee;
+}
+
+.map svg g.signal-sign path.background {
+    fill: #111;
+}
+
 .map svg g.nevp path {
     fill: #eee;
 }
