Extended signal label position tweak
*Overhead signals in Extended signal rendering mode have now, just like standard signals, their labels rendered "below" them
*Cleaned up SignalExtendedRenderer's code a bit

--- a/src/components/map/Map.css
+++ b/src/components/map/Map.css
@@ -49,11 +49,11 @@
     stroke: #eee;
 }
 
-.map svg g.extended-signal-icon g {
+.map svg g.extended-signal-icon {
     stroke: #eee;
 }
 
-.map svg g.extended-signal-icon g path.background {
+.map svg g.extended-signal-icon path.background {
     fill: #111;
 }
 
