Added isolations end markers
+Added isolation end markers rendering on the Isolations layer
*Renamed the “Isolations IDs” layer to “Isolations”

--- a/src/components/map/Map.css
+++ b/src/components/map/Map.css
@@ -32,6 +32,11 @@
     fill: #ffa;
 }
 
+.map svg path.isolation-end-marker {
+    stroke: #ffa;
+    stroke-width: 0.5px;
+}
+
 .map svg g.track-object circle {
     fill: #eee;
 }
