Align the view to a straight track on double click
This feature will be useful when exporting the visualization to an SVG file

--- a/src/components/map/track-hover-info/TrackHoverInfo.css
+++ b/src/components/map/track-hover-info/TrackHoverInfo.css
@@ -12,8 +12,18 @@
     padding: 1em;
 }
 
+.track-hover-info-popup table {
+    border-spacing: 2px;
+}
+
 .track-hover-info-popup th {
     text-align: start;
     padding-right: 2em;
+    color: #888;
+}
+
+.track-hover-info-popup__align {
+    margin-top: 1.5em;
+    padding: 2px;
     color: #888;
 }
