Added TrackHoverInfo icons
+Added TrackHoverInfo icons
*Reorganised TrackHoverInfo entries

--- a/src/components/map/track-hover-info/TrackHoverInfo.css
+++ b/src/components/map/track-hover-info/TrackHoverInfo.css
@@ -27,3 +27,9 @@
     padding: 2px;
     color: #888;
 }
+
+.track-hover-info-popup .track-hover-info-popup-label {
+    display: flex;
+    align-items: center;
+    gap: 0.5em;
+}
