Added original signal names option
+Added an option to show original (internal) signal names

--- a/src/components/sidemenu/SideMenu.css
+++ b/src/components/sidemenu/SideMenu.css
@@ -80,7 +80,8 @@
 }
 
 .extended-signals-checkbox input,
-.show-track-hover-info-checkbox input {
+.show-track-hover-info-checkbox input,
+.original-signal-names-checkbox input {
     margin-right: 0.5em;
     vertical-align: middle;
 }
