Added theme toggle
+Added dark-mode and light-mode component icons
+Added ThemeToggle in the toolbar
+Added ThemeManager and ThemeContext

--- a/src/components/toolbar/Toolbar.css
+++ b/src/components/toolbar/Toolbar.css
@@ -54,10 +54,12 @@
     width: 2rem;
 }
 
+.theme-toggle g,
 .side-menu-toggle g {
     stroke: #aaa;
 }
 
+.theme-toggle:hover g,
 .side-menu-toggle:hover g {
     stroke: #fff;
 }
