Updated styling colors
*Changed color values of some theme variables
*Tracks now have different colors depending on the theme
*Changed colors of some elements

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -44,7 +44,7 @@ input[type="text"].non-transparent,
 button.non-transparent,
 select.non-transparent {
     background: var(--layer-color-non-transparent);
-    border: 2px solid var(--layer-color-non-transparent);
+    border: 2px solid var(--border-color);
 }
 
 input[type="file"]::file-selector-button:hover,
