Fixed more CSS errors
*Sign texts no longer have shadow
*TrackHoverInfo is now using the standard background color
*Fixed z-indexes
*Tweaked disabled text color

--- a/src/components/map/Map.css
+++ b/src/components/map/Map.css
@@ -24,6 +24,10 @@
     text-shadow: 0 0 16px var(--map-shadow-color);
 }
 
+.map .sign-text {
+    text-shadow: none;
+}
+
 .map .switch-name-text {
     font-size: 3px;
 }
