--- a/src/components/map/track-hover-info/TrackHoverInfo.css
+++ b/src/components/map/track-hover-info/TrackHoverInfo.css
@@ -6,7 +6,7 @@
 }
 
 .track-hover-info-popup {
-    background-color: var(--layer-color-non-transparent);
+    background-color: var(--background-color);
     border: 2px solid var(--border-color);
     border-radius: 8px;
     padding: 1em;
