--- a/src/components/sidemenu/SideMenu.css
+++ b/src/components/sidemenu/SideMenu.css
@@ -66,7 +66,8 @@
 }
 
 .distance-meter-button button,
-.scenery-info-button button {
+.scenery-info-button button,
+.export-view-button button {
     width: 100%;
 }
 
