Added export trimming
*Objects in the exported SVG are now removed if they lay outside of the view

--- a/src/components/map/Map.css
+++ b/src/components/map/Map.css
@@ -6,6 +6,12 @@
     background-color: var(--map-background-color);
 }
 
+.export-container {
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
 .map svg path.track {
     stroke-width: 1.44px;
     fill: transparent;
