--- a/src/components/map/Map.css
+++ b/src/components/map/Map.css
@@ -6,6 +6,22 @@
     background-color: var(--map-background-color);
 }
 
+.map.export-border::after {
+    border: 5px solid var(--map-text-color);
+    content: "";
+    position: absolute;
+    
+    width: 100%;
+    width: -moz-available;
+    width: -webkit-fill-available;
+    width: stretch;
+
+    height: 100%;
+    height: -moz-available;
+    height: -webkit-fill-available;
+    height: stretch;
+}
+
 .export-container {
     position: relative;
     width: 100%;
